src/styles/App.css
/* ... */
@media (max-width: 900px) {
  .header-section {
    width: 100%;
    height: auto;
  }
}

.footer-section {
  padding: 10px 0;
  background: #c2c2c2;
}

html {
  font-size: 62.5%;
}

.App {
  text-align: center;
  background: linear-gradient(45deg, #A8D0E6, #c2c2c2);
  font-family: 'Crimson Pro', serif;
  font-size: 2.5rem;

  
}

@media (max-width: 600px) {

  .App {
    font-size: 2rem;
  }
    
  }

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #09d3ac;
}

